fix(editor): Toggle not visible in credentials modal, page background, info icon and expression switch background (no-changelog) (#9004)

--- a/packages/design-system/src/css/_tokens.dark.scss
+++ b/packages/design-system/src/css/_tokens.dark.scss
@@ -166,6 +166,7 @@
 	--color-callout-secondary-font: var(--prim-gray-0);
 
 	// Dialogs and overlays
+	--color-dialog-background: var(--prim-gray-800);
 	--color-dialog-overlay-background: var(--prim-color-alt-j-alpha-075);
 	--color-dialog-overlay-background-dark: var(--prim-color-alt-j-alpha-075);
 
@@ -178,6 +179,7 @@
 
 	// Switch (Activation, boolean)
 	--color-switch-background: var(--prim-gray-820);
+	--color-switch-border-color: var(--prim-gray-670);
 	--color-switch-toggle: var(--prim-gray-40);
 
 	// Action Dropdown
